# MT-12-cmake

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  STM32F407ZG_FLASH.ld  startup_stm32f407xx.s  test_rs485_protocol.py
cmake/: arm-none-eabi.cmake
docs/: FLASH_SOP.md  MT12-溫度控制卡-V2.1.doc  MT12_PROTOCOL.md  MT12_manual_V2.1.md  cooling_filter_optimization_20260417.md  dev_workflow.md  heating_control_logic.md  register_map.md  temperature_antijitter_optimization.md  模溫機資料定義.xlsx
scripts/: mt12_modbus.py  mt12_monitor_gui.py  mt12_sniffer_gui.py
src/: Data.h  DataInit.c  DataInit.h  EEPROM.c  EEPROM.h  IntTm0.c  IntTm0.h  IntTm1.c  IntTm1.h  IntTm2.c  IntTm3.c  RS485.c  RS485.h  Temp.c  Temp.h  alpum.lib  alpum_interface_rev1.1.c  alpum_interface_rev1.1.h  alpum_interface_rev1.1_modify.c  alpum_new.lib  dbg_uart.h  delay.h  eeprom_interface.c  main.c  main.h  missing_symbols.c  provide.h  stm32f4xx_bridge.h  stm32f4xx_conf.h  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  system_stm32f4xx.c
src/CMSIS/Include/: math.h  stdio.h  stdlib.h  string.h
src/StdPeriphLib/: stm32f4xx.h  stm32f4xx_dma.c  stm32f4xx_dma.h  stm32f4xx_gpio.c
test/: rs485_echo.c
